added comments for you too play around with some pieces of code

--- a/Max_Diversification.ipynb
+++ b/Max_Diversification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "id": "5008acbd-b508-454c-abaf-202ca736cdfb",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "id": "63589605-a9c7-428d-ba9d-93479a29fc26",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "18c1bd0b-4047-4479-8160-6417b48059a3",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "id": "4fde3178-c36f-4ae9-80ec-55f48bc3b94d",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "[5022 rows x 1 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "id": "07b4f753-3e99-4742-acba-032da04b3753",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "id": "4fc35f43-59b1-44d8-9355-58f6384abbd4",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
        "[5003 rows x 8 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "id": "33d114c3-1e77-4838-a861-bb4470c412a4",
    "metadata": {},
    "outputs": [
@@ -479,6 +479,9 @@
     "    # Loop through the resampled returns to rebalance\n",
     "    for i in range(1, len(resampled_returns)):\n",
     "        # Get the daily returns for the current month (period)\n",
+    "\n",
+    "# this is where the lookback period is defined\n",
+    "        \n",
     "        start_date = resampled_returns.index[i-1]\n",
     "        end_date = resampled_returns.index[i]\n",
     "        # Use .loc for time-based indexing to get the daily returns for the current period\n",
@@ -555,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 19,
    "id": "4d921794-764c-4cd4-a7bf-d8d130fb2e38",
    "metadata": {},
    "outputs": [
@@ -604,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 20,
    "id": "294dccd0-c315-47af-b145-ac41ec121705",
    "metadata": {},
    "outputs": [
