minor changes to volatility regimes analysis

--- a/Volatility Regimes.ipynb
+++ b/Volatility Regimes.ipynb
@@ -653,6 +653,8 @@
     }
    ],
    "source": [
+    "# feel free to play around with the rolling window\n",
+    "\n",
     "def calc_rolling_vola(returns, rolling_window=20, resample_period=\"ME\"):\n",
     "    # Optionally resample the data (if resample_period is provided, e.g., 'M' for monthly)\n",
     "    if resample_period:\n",
