MG finalised the 1/n approach

--- a/1_over_N.ipynb
+++ b/1_over_N.ipynb
@@ -723,7 +723,8 @@
     "print(f\"Geo avg monthly return: {geo_avg_monthly_return_rebalancing*100:.2f}%\")\n",
     "print(f\"Geo avg yearly return: {geo_avg_yearly_return_rebalancing*100:.2f}%\")\n",
     "print(f\"Sharpe Ratio: {sharpe_ratio_rebalancing:.2f}\")\n",
-    "print(f\"Monthly 99% Value at Risk (VaR): {VaR_99_rebalancing:.4f}\")\n"
+    "print(f\"Monthly 99% Value at Risk (VaR): {VaR_99_rebalancing:.4f}\")\n",
+    "#1/n is now finalised"
    ],
    "outputs": [
     {
