--- a/1_over_N.ipynb
+++ b/1_over_N.ipynb
@@ -5,8 +5,8 @@
    "id": "5008acbd-b508-454c-abaf-202ca736cdfb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:31:20.797478Z",
-     "start_time": "2025-01-15T16:31:20.779389Z"
+     "end_time": "2025-01-15T16:46:01.346478Z",
+     "start_time": "2025-01-15T16:46:00.784826Z"
     }
    },
    "source": [
@@ -16,15 +16,15 @@
     "import matplotlib.pyplot as plt\n"
    ],
    "outputs": [],
-   "execution_count": 102
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "id": "63589605-a9c7-428d-ba9d-93479a29fc26",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:31:22.815012Z",
-     "start_time": "2025-01-15T16:31:20.804011Z"
+     "end_time": "2025-01-15T16:46:03.421498Z",
+     "start_time": "2025-01-15T16:46:01.359553Z"
     }
    },
    "source": [
@@ -39,15 +39,15 @@
     "gold = pd.read_excel(\"./data/Price History_IAU_Gold_Trust.xlsx\")"
    ],
    "outputs": [],
-   "execution_count": 103
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "id": "18c1bd0b-4047-4479-8160-6417b48059a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:31:22.853762Z",
-     "start_time": "2025-01-15T16:31:22.834662Z"
+     "end_time": "2025-01-15T16:46:03.578309Z",
+     "start_time": "2025-01-15T16:46:03.504761Z"
     }
    },
    "source": [
@@ -68,15 +68,15 @@
     "gold = preprocess_and_rename(gold, 'Gold')"
    ],
    "outputs": [],
-   "execution_count": 104
+   "execution_count": 3
   },
   {
    "cell_type": "code",
    "id": "4fde3178-c36f-4ae9-80ec-55f48bc3b94d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:31:22.872648Z",
-     "start_time": "2025-01-15T16:31:22.867985Z"
+     "end_time": "2025-01-15T16:46:03.650821Z",
+     "start_time": "2025-01-15T16:46:03.640461Z"
     }
    },
    "source": "us",
@@ -177,20 +177,20 @@
        "</div>"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 105
+   "execution_count": 4
   },
   {
    "cell_type": "code",
    "id": "07b4f753-3e99-4742-acba-032da04b3753",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:31:22.896372Z",
-     "start_time": "2025-01-15T16:31:22.888551Z"
+     "end_time": "2025-01-15T16:46:03.725940Z",
+     "start_time": "2025-01-15T16:46:03.715681Z"
     }
    },
    "source": [
@@ -204,15 +204,15 @@
     "returns = returns.sort_values(by='Exchange Date', ascending=True)"
    ],
    "outputs": [],
-   "execution_count": 106
+   "execution_count": 5
   },
   {
    "cell_type": "code",
    "id": "4fc35f43-59b1-44d8-9355-58f6384abbd4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:31:22.925840Z",
-     "start_time": "2025-01-15T16:31:22.919538Z"
+     "end_time": "2025-01-15T16:46:03.772610Z",
+     "start_time": "2025-01-15T16:46:03.764667Z"
     }
    },
    "source": [
@@ -420,20 +420,20 @@
        "</div>"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 107
+   "execution_count": 6
   },
   {
    "cell_type": "code",
    "id": "84766e3a-c776-4e04-8092-15497ef48b8a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:31:23.131196Z",
-     "start_time": "2025-01-15T16:31:22.995387Z"
+     "end_time": "2025-01-15T16:46:04.033638Z",
+     "start_time": "2025-01-15T16:46:03.853811Z"
     }
    },
    "source": [
@@ -500,15 +500,15 @@
      ]
     }
    ],
-   "execution_count": 108
+   "execution_count": 7
   },
   {
    "cell_type": "code",
    "id": "9c11f155-0388-428f-a8c5-7d32cbe11f6a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:31:23.162475Z",
-     "start_time": "2025-01-15T16:31:23.155909Z"
+     "end_time": "2025-01-15T16:46:04.083250Z",
+     "start_time": "2025-01-15T16:46:04.060643Z"
     }
    },
    "source": [
@@ -549,7 +549,7 @@
     "print(f\"Total return: {total_return_non_rebalancing * 100:.2f}%\")\n",
     "print(f\"Geo avg monthly return: {geo_avg_monthly_return_non_rebalancing*100:.2f}%\")\n",
     "print(f\"Geo avg yearly return: {geo_avg_yearly_return_non_rebalancing*100:.2f}%\")\n",
-    "print(f\"Sharpe Ratio: {sharpe_ratio_non_rebalancing:.2f}\")\n",
+    "print(f\"Total avg Sharpe Ratio: {sharpe_ratio_non_rebalancing:.2f}\")\n",
     "print(f\"Monthly 99% Value at Risk (VaR): {VaR_99_non_rebalancing:.4f}\")\n"
    ],
    "outputs": [
@@ -562,20 +562,20 @@
       "Total return: 190.82%\n",
       "Geo avg monthly return: 0.45%\n",
       "Geo avg yearly return: 5.51%\n",
-      "Sharpe Ratio: 0.58\n",
+      "Total avg Sharpe Ratio: 0.58\n",
       "Monthly 99% Value at Risk (VaR): -0.0591\n"
      ]
     }
    ],
-   "execution_count": 109
+   "execution_count": 8
   },
   {
    "cell_type": "code",
    "id": "3e0c493b-ed20-4157-8407-99884459e5dc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:31:23.318664Z",
-     "start_time": "2025-01-15T16:31:23.171533Z"
+     "end_time": "2025-01-15T16:46:04.279916Z",
+     "start_time": "2025-01-15T16:46:04.122301Z"
     }
    },
    "source": [
@@ -672,15 +672,15 @@
      ]
     }
    ],
-   "execution_count": 110
+   "execution_count": 9
   },
   {
    "cell_type": "code",
    "id": "55c143ce-3a80-4133-a356-d86143dcaa38",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:31:23.346779Z",
-     "start_time": "2025-01-15T16:31:23.340359Z"
+     "end_time": "2025-01-15T16:46:04.294859Z",
+     "start_time": "2025-01-15T16:46:04.287243Z"
     }
    },
    "source": [
@@ -722,9 +722,9 @@
     "print(f\"Total return: {total_return_rebalancing * 100:.2f}%\")\n",
     "print(f\"Geo avg monthly return: {geo_avg_monthly_return_rebalancing*100:.2f}%\")\n",
     "print(f\"Geo avg yearly return: {geo_avg_yearly_return_rebalancing*100:.2f}%\")\n",
-    "print(f\"Sharpe Ratio: {sharpe_ratio_rebalancing:.2f}\")\n",
+    "print(f\"Total avg Sharpe Ratio: {sharpe_ratio_rebalancing:.2f}\")\n",
     "print(f\"Monthly 99% Value at Risk (VaR): {VaR_99_rebalancing:.4f}\")\n",
-    "#1/n is now finalised"
+    "#1/n is now final"
    ],
    "outputs": [
     {
@@ -736,12 +736,12 @@
       "Total return: 115.93%\n",
       "Geo avg monthly return: 0.33%\n",
       "Geo avg yearly return: 3.97%\n",
-      "Sharpe Ratio: 0.68\n",
+      "Total avg Sharpe Ratio: 0.68\n",
       "Monthly 99% Value at Risk (VaR): -0.0488\n"
      ]
     }
    ],
-   "execution_count": 111
+   "execution_count": 10
   }
  ],
  "metadata": {
