MG finalised 1/n approach

--- a/1_over_N.ipynb
+++ b/1_over_N.ipynb
@@ -5,8 +5,8 @@
    "id": "5008acbd-b508-454c-abaf-202ca736cdfb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:46:01.346478Z",
-     "start_time": "2025-01-15T16:46:00.784826Z"
+     "end_time": "2025-01-15T16:47:09.755287Z",
+     "start_time": "2025-01-15T16:47:09.747389Z"
     }
    },
    "source": [
@@ -16,15 +16,15 @@
     "import matplotlib.pyplot as plt\n"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 11
   },
   {
    "cell_type": "code",
    "id": "63589605-a9c7-428d-ba9d-93479a29fc26",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:46:03.421498Z",
-     "start_time": "2025-01-15T16:46:01.359553Z"
+     "end_time": "2025-01-15T16:47:11.891551Z",
+     "start_time": "2025-01-15T16:47:09.765977Z"
     }
    },
    "source": [
@@ -39,15 +39,15 @@
     "gold = pd.read_excel(\"./data/Price History_IAU_Gold_Trust.xlsx\")"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 12
   },
   {
    "cell_type": "code",
    "id": "18c1bd0b-4047-4479-8160-6417b48059a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:46:03.578309Z",
-     "start_time": "2025-01-15T16:46:03.504761Z"
+     "end_time": "2025-01-15T16:47:11.951448Z",
+     "start_time": "2025-01-15T16:47:11.927531Z"
     }
    },
    "source": [
@@ -68,15 +68,15 @@
     "gold = preprocess_and_rename(gold, 'Gold')"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 13
   },
   {
    "cell_type": "code",
    "id": "4fde3178-c36f-4ae9-80ec-55f48bc3b94d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:46:03.650821Z",
-     "start_time": "2025-01-15T16:46:03.640461Z"
+     "end_time": "2025-01-15T16:47:11.971611Z",
+     "start_time": "2025-01-15T16:47:11.965119Z"
     }
    },
    "source": "us",
@@ -177,20 +177,20 @@
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 14
   },
   {
    "cell_type": "code",
    "id": "07b4f753-3e99-4742-acba-032da04b3753",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:46:03.725940Z",
-     "start_time": "2025-01-15T16:46:03.715681Z"
+     "end_time": "2025-01-15T16:47:12.023646Z",
+     "start_time": "2025-01-15T16:47:12.010513Z"
     }
    },
    "source": [
@@ -204,15 +204,15 @@
     "returns = returns.sort_values(by='Exchange Date', ascending=True)"
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 15
   },
   {
    "cell_type": "code",
    "id": "4fc35f43-59b1-44d8-9355-58f6384abbd4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:46:03.772610Z",
-     "start_time": "2025-01-15T16:46:03.764667Z"
+     "end_time": "2025-01-15T16:47:12.090898Z",
+     "start_time": "2025-01-15T16:47:12.084549Z"
     }
    },
    "source": [
@@ -420,20 +420,20 @@
        "</div>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 16
   },
   {
    "cell_type": "code",
    "id": "84766e3a-c776-4e04-8092-15497ef48b8a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:46:04.033638Z",
-     "start_time": "2025-01-15T16:46:03.853811Z"
+     "end_time": "2025-01-15T16:47:12.289027Z",
+     "start_time": "2025-01-15T16:47:12.145529Z"
     }
    },
    "source": [
@@ -500,15 +500,15 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 17
   },
   {
    "cell_type": "code",
    "id": "9c11f155-0388-428f-a8c5-7d32cbe11f6a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:46:04.083250Z",
-     "start_time": "2025-01-15T16:46:04.060643Z"
+     "end_time": "2025-01-15T16:47:12.329496Z",
+     "start_time": "2025-01-15T16:47:12.314200Z"
     }
    },
    "source": [
@@ -544,7 +544,7 @@
     "VaR_99_non_rebalancing = monthly_returns_non_rebalancing.quantile(1 - 0.99)\n",
     "\n",
     "# Print results for non-rebalancing portfolio\n",
-    "print(f\"### Non-Rebalancing Portfolio Analytics ###\")\n",
+    "print(f\"### 1/n Non-Rebalancing Portfolio Analytics ###\")\n",
     "print(f\"Avg annualized monthly volatility: {rolling_annual_volatility_non_rebalancing.mean():.4f}\")\n",
     "print(f\"Total return: {total_return_non_rebalancing * 100:.2f}%\")\n",
     "print(f\"Geo avg monthly return: {geo_avg_monthly_return_non_rebalancing*100:.2f}%\")\n",
@@ -557,7 +557,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "### Non-Rebalancing Portfolio Analytics ###\n",
+      "### 1/n Non-Rebalancing Portfolio Analytics ###\n",
       "Avg annualized monthly volatility: 0.0942\n",
       "Total return: 190.82%\n",
       "Geo avg monthly return: 0.45%\n",
@@ -567,15 +567,15 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 18
   },
   {
    "cell_type": "code",
    "id": "3e0c493b-ed20-4157-8407-99884459e5dc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:46:04.279916Z",
-     "start_time": "2025-01-15T16:46:04.122301Z"
+     "end_time": "2025-01-15T16:47:12.505714Z",
+     "start_time": "2025-01-15T16:47:12.362905Z"
     }
    },
    "source": [
@@ -672,15 +672,15 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 19
   },
   {
    "cell_type": "code",
    "id": "55c143ce-3a80-4133-a356-d86143dcaa38",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:46:04.294859Z",
-     "start_time": "2025-01-15T16:46:04.287243Z"
+     "end_time": "2025-01-15T16:47:12.530460Z",
+     "start_time": "2025-01-15T16:47:12.523319Z"
     }
    },
    "source": [
@@ -717,7 +717,7 @@
     "VaR_99_rebalancing = monthly_returns_rebalancing.quantile(1 - 0.99)\n",
     "\n",
     "# Print results for rebalancing portfolio\n",
-    "print(f\"### Rebalancing Portfolio Analytics ###\")\n",
+    "print(f\"### 1/n Rebalancing Portfolio Analytics ###\")\n",
     "print(f\"Avg annualized monthly volatility: {rolling_annual_volatility_rebalancing.mean():.4f}\")\n",
     "print(f\"Total return: {total_return_rebalancing * 100:.2f}%\")\n",
     "print(f\"Geo avg monthly return: {geo_avg_monthly_return_rebalancing*100:.2f}%\")\n",
@@ -731,7 +731,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "### Rebalancing Portfolio Analytics ###\n",
+      "### 1/n Rebalancing Portfolio Analytics ###\n",
       "Avg annualized monthly volatility: 0.0583\n",
       "Total return: 115.93%\n",
       "Geo avg monthly return: 0.33%\n",
@@ -741,7 +741,7 @@
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 20
   }
  ],
  "metadata": {
