MG found some inconsistencies in 1/n an min var and started to fix them, rollback push

--- a/1_over_N.ipynb
+++ b/1_over_N.ipynb
@@ -5,8 +5,8 @@
    "id": "5008acbd-b508-454c-abaf-202ca736cdfb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:47:09.755287Z",
-     "start_time": "2025-01-15T16:47:09.747389Z"
+     "end_time": "2025-01-16T14:40:11.037505Z",
+     "start_time": "2025-01-16T14:40:10.404608Z"
     }
    },
    "source": [
@@ -16,15 +16,15 @@
     "import matplotlib.pyplot as plt\n"
    ],
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "id": "63589605-a9c7-428d-ba9d-93479a29fc26",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:47:11.891551Z",
-     "start_time": "2025-01-15T16:47:09.765977Z"
+     "end_time": "2025-01-16T14:40:14.391388Z",
+     "start_time": "2025-01-16T14:40:12.041058Z"
     }
    },
    "source": [
@@ -39,15 +39,15 @@
     "gold = pd.read_excel(\"./data/Price History_IAU_Gold_Trust.xlsx\")"
    ],
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "id": "18c1bd0b-4047-4479-8160-6417b48059a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:47:11.951448Z",
-     "start_time": "2025-01-15T16:47:11.927531Z"
+     "end_time": "2025-01-16T14:40:15.279709Z",
+     "start_time": "2025-01-16T14:40:15.239703Z"
     }
    },
    "source": [
@@ -68,15 +68,15 @@
     "gold = preprocess_and_rename(gold, 'Gold')"
    ],
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 3
   },
   {
    "cell_type": "code",
    "id": "4fde3178-c36f-4ae9-80ec-55f48bc3b94d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:47:11.971611Z",
-     "start_time": "2025-01-15T16:47:11.965119Z"
+     "end_time": "2025-01-16T14:40:17.171148Z",
+     "start_time": "2025-01-16T14:40:17.159990Z"
     }
    },
    "source": "us",
@@ -177,20 +177,20 @@
        "</div>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 4
   },
   {
    "cell_type": "code",
    "id": "07b4f753-3e99-4742-acba-032da04b3753",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:47:12.023646Z",
-     "start_time": "2025-01-15T16:47:12.010513Z"
+     "end_time": "2025-01-16T14:40:19.297083Z",
+     "start_time": "2025-01-16T14:40:19.272648Z"
     }
    },
    "source": [
@@ -204,15 +204,15 @@
     "returns = returns.sort_values(by='Exchange Date', ascending=True)"
    ],
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 5
   },
   {
    "cell_type": "code",
    "id": "4fc35f43-59b1-44d8-9355-58f6384abbd4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:47:12.090898Z",
-     "start_time": "2025-01-15T16:47:12.084549Z"
+     "end_time": "2025-01-16T14:40:20.661644Z",
+     "start_time": "2025-01-16T14:40:20.648966Z"
     }
    },
    "source": [
@@ -420,20 +420,20 @@
        "</div>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 16
+   "execution_count": 6
   },
   {
    "cell_type": "code",
    "id": "84766e3a-c776-4e04-8092-15497ef48b8a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:47:12.289027Z",
-     "start_time": "2025-01-15T16:47:12.145529Z"
+     "end_time": "2025-01-16T14:50:11.592439Z",
+     "start_time": "2025-01-16T14:50:11.371098Z"
     }
    },
    "source": [
@@ -500,57 +500,53 @@
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 7
   },
   {
    "cell_type": "code",
    "id": "9c11f155-0388-428f-a8c5-7d32cbe11f6a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T16:47:12.329496Z",
-     "start_time": "2025-01-15T16:47:12.314200Z"
+     "end_time": "2025-01-16T14:51:04.404046Z",
+     "start_time": "2025-01-16T14:51:04.379071Z"
     }
    },
    "source": [
-    "#### 1/n Portfolio Analytics Non-Rebalancing ####\n",
+    "#### 1/n Non-Rebalancing Portfolio Analytics ####\n",
     "\n",
-    "# Resample to monthly frequency and calculate monthly returns\n",
-    "monthly_returns_non_rebalancing = portfolio_value_non_rebalancing.resample('ME').ffill().pct_change().dropna()\n",
+    "# 1) Resample to monthly frequency and calculate monthly returns\n",
+    "monthly_portfolio_value_nonrebal = portfolio_value_non_rebalancing.resample('ME').ffill()\n",
+    "monthly_returns_nonrebal = monthly_portfolio_value_nonrebal.pct_change().dropna()\n",
     "\n",
-    "# Calculate rolling annual volatility\n",
-    "rolling_annual_volatility_non_rebalancing = (\n",
-    "    monthly_returns_non_rebalancing.rolling(window=12).std() * np.sqrt(12)\n",
-    ")\n",
+    "# 2) Full-sample monthly volatility, then annualize\n",
+    "full_sample_monthly_vol_nonrebal = monthly_returns_nonrebal.std()\n",
+    "annualized_vol_nonrebal = full_sample_monthly_vol_nonrebal * np.sqrt(12)\n",
     "\n",
-    "# Calculate total return\n",
-    "total_return_non_rebalancing = (\n",
-    "    portfolio_value_non_rebalancing.iloc[-1] - portfolio_value_non_rebalancing.iloc[0]\n",
-    ") / portfolio_value_non_rebalancing.iloc[0]\n",
+    "# 3) Total return & Geometric means\n",
+    "initial_val_nonrebal = portfolio_value_non_rebalancing.iloc[0]\n",
+    "final_val_nonrebal = portfolio_value_non_rebalancing.iloc[-1]\n",
+    "total_return_nonrebal = (final_val_nonrebal - initial_val_nonrebal) / initial_val_nonrebal\n",
     "\n",
-    "# Geometric average monthly and yearly return\n",
-    "n_months = len(monthly_returns_non_rebalancing)\n",
-    "geo_avg_monthly_return_non_rebalancing = (\n",
-    "    (portfolio_value_non_rebalancing.iloc[-1] / portfolio_value_non_rebalancing.iloc[0])\n",
-    "    ** (1 / n_months) - 1\n",
-    ")\n",
-    "geo_avg_yearly_return_non_rebalancing = (1 + geo_avg_monthly_return_non_rebalancing) ** 12 - 1\n",
+    "n_months_nonrebal = len(monthly_returns_nonrebal)\n",
+    "geo_avg_monthly_return_nonrebal = (final_val_nonrebal / initial_val_nonrebal) ** (1 / n_months_nonrebal) - 1\n",
+    "geo_avg_yearly_return_nonrebal = (1 + geo_avg_monthly_return_nonrebal) ** 12 - 1\n",
     "\n",
-    "# Sharpe Ratio\n",
-    "sharpe_ratio_non_rebalancing = (\n",
-    "    geo_avg_yearly_return_non_rebalancing / rolling_annual_volatility_non_rebalancing.mean()\n",
-    ")\n",
+    "# 4) Sharpe Ratio\n",
+    "arithmetic_monthly_return_nonrebal = monthly_returns_nonrebal.mean()   # Arithmetic mean of monthly returns\n",
+    "annualized_arithmetic_return_nonrebal = arithmetic_monthly_return_nonrebal * 12\n",
+    "sharpe_ratio_nonrebal = annualized_arithmetic_return_nonrebal / annualized_vol_nonrebal\n",
     "\n",
-    "# Calculate 99% Value at Risk (VaR)\n",
-    "VaR_99_non_rebalancing = monthly_returns_non_rebalancing.quantile(1 - 0.99)\n",
+    "# 5) Monthly 99% VaR\n",
+    "VaR_99_nonrebal = monthly_returns_nonrebal.quantile(1 - 0.99)\n",
     "\n",
-    "# Print results for non-rebalancing portfolio\n",
-    "print(f\"### 1/n Non-Rebalancing Portfolio Analytics ###\")\n",
-    "print(f\"Avg annualized monthly volatility: {rolling_annual_volatility_non_rebalancing.mean():.4f}\")\n",
-    "print(f\"Total return: {total_return_non_rebalancing * 100:.2f}%\")\n",
-    "print(f\"Geo avg monthly return: {geo_avg_monthly_return_non_rebalancing*100:.2f}%\")\n",
-    "print(f\"Geo avg yearly return: {geo_avg_yearly_return_non_rebalancing*100:.2f}%\")\n",
-    "print(f\"Total avg Sharpe Ratio: {sharpe_ratio_non_rebalancing:.2f}\")\n",
-    "print(f\"Monthly 99% Value at Risk (VaR): {VaR_99_non_rebalancing:.4f}\")\n"
+    "# 6) Print results\n",
+    "print(\"### 1/n Non-Rebalancing Portfolio Analytics ###\")\n",
+    "print(f\"Full-sample annualized monthly volatility: {annualized_vol_nonrebal:.4f}\")\n",
+    "print(f\"Total return: {total_return_nonrebal * 100:.2f}%\")\n",
+    "print(f\"Geometric avg monthly return (CAGR basis): {geo_avg_monthly_return_nonrebal * 100:.2f}%\")\n",
+    "print(f\"Geometric avg yearly return (CAGR basis): {geo_avg_yearly_return_nonrebal * 100:.2f}%\")\n",
+    "print(f\"Sharpe Ratio (Arithmetic Return / Annualized Vol): {sharpe_ratio_nonrebal:.2f}\")\n",
+    "print(f\"Monthly 99% Value at Risk (VaR): {VaR_99_nonrebal:.4f}\")\n"
    ],
    "outputs": [
     {
@@ -558,16 +554,16 @@
      "output_type": "stream",
      "text": [
       "### 1/n Non-Rebalancing Portfolio Analytics ###\n",
-      "Avg annualized monthly volatility: 0.0942\n",
+      "Full-sample annualized monthly volatility: 0.0980\n",
       "Total return: 190.82%\n",
-      "Geo avg monthly return: 0.45%\n",
-      "Geo avg yearly return: 5.51%\n",
-      "Total avg Sharpe Ratio: 0.58\n",
+      "Geometric avg monthly return (CAGR basis): 0.45%\n",
+      "Geometric avg yearly return (CAGR basis): 5.51%\n",
+      "Sharpe Ratio (Arithmetic Return / Annualized Vol): 0.60\n",
       "Monthly 99% Value at Risk (VaR): -0.0591\n"
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 10
   },
   {
    "cell_type": "code",
