--- a/Max_Diversification.ipynb
+++ b/Max_Diversification.ipynb
@@ -5,8 +5,8 @@
    "id": "5008acbd-b508-454c-abaf-202ca736cdfb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T15:53:51.764093Z",
-     "start_time": "2025-01-15T15:53:51.756148Z"
+     "end_time": "2025-01-16T14:43:11.437003Z",
+     "start_time": "2025-01-16T14:43:11.422824Z"
     }
    },
    "source": [
@@ -18,15 +18,15 @@
     "from scipy.optimize import minimize"
    ],
    "outputs": [],
-   "execution_count": 130
+   "execution_count": 11
   },
   {
    "cell_type": "code",
    "id": "63589605-a9c7-428d-ba9d-93479a29fc26",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T15:53:53.833497Z",
-     "start_time": "2025-01-15T15:53:51.803016Z"
+     "end_time": "2025-01-16T14:43:13.463912Z",
+     "start_time": "2025-01-16T14:43:11.444853Z"
     }
    },
    "source": [
@@ -41,15 +41,15 @@
     "gold = pd.read_excel(\"./data/Price History_IAU_Gold_Trust.xlsx\")"
    ],
    "outputs": [],
-   "execution_count": 131
+   "execution_count": 12
   },
   {
    "cell_type": "code",
    "id": "18c1bd0b-4047-4479-8160-6417b48059a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T15:53:53.856620Z",
-     "start_time": "2025-01-15T15:53:53.838412Z"
+     "end_time": "2025-01-16T14:43:13.514705Z",
+     "start_time": "2025-01-16T14:43:13.496097Z"
     }
    },
    "source": [
@@ -70,15 +70,15 @@
     "gold = preprocess_and_rename(gold, 'Gold')"
    ],
    "outputs": [],
-   "execution_count": 132
+   "execution_count": 13
   },
   {
    "cell_type": "code",
    "id": "4fde3178-c36f-4ae9-80ec-55f48bc3b94d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T15:53:53.880760Z",
-     "start_time": "2025-01-15T15:53:53.876603Z"
+     "end_time": "2025-01-16T14:50:18.441128Z",
+     "start_time": "2025-01-16T14:50:18.420551Z"
     }
    },
    "source": [
@@ -181,20 +181,20 @@
        "</div>"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 133
+   "execution_count": 19
   },
   {
    "cell_type": "code",
    "id": "07b4f753-3e99-4742-acba-032da04b3753",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T15:53:53.919999Z",
-     "start_time": "2025-01-15T15:53:53.913462Z"
+     "end_time": "2025-01-16T14:43:13.575553Z",
+     "start_time": "2025-01-16T14:43:13.569309Z"
     }
    },
    "source": [
@@ -208,15 +208,15 @@
     "returns = returns.sort_values(by='Exchange Date', ascending=True)"
    ],
    "outputs": [],
-   "execution_count": 134
+   "execution_count": 15
   },
   {
    "cell_type": "code",
    "id": "4fc35f43-59b1-44d8-9355-58f6384abbd4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T15:53:53.970643Z",
-     "start_time": "2025-01-15T15:53:53.961692Z"
+     "end_time": "2025-01-16T14:43:13.611805Z",
+     "start_time": "2025-01-16T14:43:13.606274Z"
     }
    },
    "source": [
@@ -424,20 +424,20 @@
        "</div>"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 135
+   "execution_count": 16
   },
   {
    "cell_type": "code",
    "id": "33d114c3-1e77-4838-a861-bb4470c412a4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T15:53:54.662041Z",
-     "start_time": "2025-01-15T15:53:54.025889Z"
+     "end_time": "2025-01-16T14:43:14.373478Z",
+     "start_time": "2025-01-16T14:43:13.659694Z"
     }
    },
    "source": [
@@ -984,66 +984,72 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 136
+   "execution_count": 17
   },
   {
-   "cell_type": "code",
-   "id": "4d921794-764c-4cd4-a7bf-d8d130fb2e38",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-15T15:53:54.689526Z",
-     "start_time": "2025-01-15T15:53:54.684370Z"
+     "end_time": "2025-01-16T14:43:14.403386Z",
+     "start_time": "2025-01-16T14:43:14.396597Z"
     }
    },
+   "cell_type": "code",
    "source": [
-    "# Calculate monthly returns from the portfolio value\n",
-    "portfolio_returns = portfolio_value.pct_change().dropna()  # Monthly returns\n",
+    "#### Max Div Portfolio Analytics ####\n",
     "\n",
-    "# Calculate the monthly volatility (standard deviation of returns)\n",
-    "monthly_volatility = portfolio_returns.std()\n",
+    "# 1) Resample to monthly frequency and calculate monthly returns\n",
+    "monthly_portfolio_value_maxdiv = portfolio_value.resample('ME').ffill()\n",
+    "monthly_returns_maxdiv = monthly_portfolio_value_maxdiv.pct_change().dropna()\n",
     "\n",
-    "# Annualize the volatility (multiply by sqrt(12))\n",
-    "annualized_volatility = monthly_volatility * np.sqrt(12)\n",
+    "# 2) Full sample annualized monthly volatility\n",
+    "full_sample_monthly_vol = monthly_returns_maxdiv.std()\n",
+    "annualized_vol = full_sample_monthly_vol * np.sqrt(12)\n",
     "\n",
-    "# Calculate average annualized monthly volatility\n",
-    "rolling_annual_volatility = portfolio_returns.rolling(window=21).std() * np.sqrt(12)  # 21 trading days in a month\n",
-    "print(f\"Average annualized monthly volatility: {rolling_annual_volatility.mean()}\")\n",
+    "# 3) Total return & Geo means\n",
+    "initial_val = portfolio_value.iloc[0]\n",
+    "final_val = portfolio_value.iloc[-1]\n",
+    "total_return_maxdiv = (final_val - initial_val) / initial_val\n",
     "\n",
-    "# Calculate total return (from the initial to the final value)\n",
-    "total_return = (portfolio_value.iloc[-1] - portfolio_value.iloc[0]) / portfolio_value.iloc[0]\n",
-    "print(f\"Total return: {total_return * 100:.2f}%\")\n",
+    "n_months = len(monthly_returns_maxdiv)\n",
+    "geo_avg_monthly_return_maxdiv = (final_val / initial_val) ** (1 / n_months) - 1\n",
+    "geo_avg_yearly_return_maxdiv = (1 + geo_avg_monthly_return_maxdiv) ** 12 - 1\n",
     "\n",
-    "# Calculate average monthly return\n",
-    "avg_monthly_return = portfolio_returns.mean()\n",
-    "print(f\"Average monthly return: {avg_monthly_return * 100:.2f}%\")\n",
+    "# 5) Sharpe Ratio\n",
+    "arithmetic_monthly_return = monthly_returns_maxdiv.mean()  # Arithmetic mean of monthly returns\n",
+    "annualized_arithmetic_return = arithmetic_monthly_return * 12  # Annualized arithmetic return\n",
+    "sharpe_ratio_maxdiv = annualized_arithmetic_return / annualized_vol\n",
     "\n",
-    "# Calculate average yearly return (annualized return)\n",
-    "avg_yearly_return = ((1 + avg_monthly_return) ** 12) - 1\n",
-    "print(f\"Average yearly return: {avg_yearly_return * 100:.2f}%\")\n",
+    "# 6) Monthly 99% VaR\n",
+    "VaR_99_maxdiv = monthly_returns_maxdiv.quantile(1 - 0.99)\n",
     "\n",
-    "# Calculate the Sharpe ratio (assuming risk-free rate is 0)\n",
-    "sharpe_ratio = avg_yearly_return / rolling_annual_volatility.mean()\n",
-    "print(f\"Sharpe Ratio: {sharpe_ratio:.2f}\")\n",
+    "# 7) Print results\n",
+    "print(\"### Maximum Diversification Portfolio Analytics ###\")\n",
+    "print(f\"Full-sample annualized monthly volatility: {annualized_vol:.4f}\")\n",
+    "print(f\"Total return: {total_return_maxdiv * 100:.2f}%\")\n",
     "\n",
-    "# Calculate the monthly VaR for each month using the Historical Simulation method\n",
-    "VaR_99 = portfolio_returns.quantile(1 - 0.99)\n",
-    "print(f\"Monthly 99% Value at Risk (VaR) is: {VaR_99:.4f}\")"
+    "print(f\"Geometric avg monthly return (CAGR basis): {geo_avg_monthly_return_maxdiv * 100:.2f}%\")\n",
+    "print(f\"Geometric avg yearly return (CAGR basis): {geo_avg_yearly_return_maxdiv * 100:.2f}%\")\n",
+    "\n",
+    "print(f\"Sharpe Ratio (Arithmetic Return / Annualized Vol): {sharpe_ratio_maxdiv:.2f}\")\n",
+    "print(f\"Monthly 99% Value at Risk (VaR): {VaR_99_maxdiv:.4f}\")\n"
    ],
+   "id": "bd3590c569642655",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average annualized monthly volatility: 0.12835018391326317\n",
+      "### Maximum Diversification Portfolio Analytics ###\n",
+      "Full-sample annualized monthly volatility: 0.0819\n",
       "Total return: 127.86%\n",
-      "Average monthly return: 1.13%\n",
-      "Average yearly return: 14.41%\n",
-      "Sharpe Ratio: 1.12\n",
-      "Monthly 99% Value at Risk (VaR) is: -0.1066\n"
+      "Geometric avg monthly return (CAGR basis): 0.35%\n",
+      "Geometric avg yearly return (CAGR basis): 4.26%\n",
+      "Sharpe Ratio (Arithmetic Return / Annualized Vol): 0.55\n",
+      "Monthly 99% Value at Risk (VaR): -0.0665\n"
      ]
     }
    ],
-   "execution_count": 137
+   "execution_count": 18
   }
  ],
  "metadata": {
