MG rewrote min var to decouple rebalancing frequency from portfolio retrun calculation (v2.0)

--- a/Min_Var.ipynb
+++ b/Min_Var.ipynb
@@ -434,12 +434,12 @@
    "id": "33d114c3-1e77-4838-a861-bb4470c412a4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-16T19:01:56.235804Z",
-     "start_time": "2025-01-16T19:01:55.520473Z"
+     "end_time": "2025-01-16T19:03:56.271212Z",
+     "start_time": "2025-01-16T19:03:55.490242Z"
     }
    },
    "source": [
-    "#### Min Var Portfolio Construction ####\n",
+    "#### Min Var Portfolio Construction #### ver. 2.0\n",
     "\n",
     "# Helper to calculate portfolio variance\n",
     "def calc_portfolio_variance(w, covariance_matrix):\n",
@@ -572,13 +572,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 51
+   "execution_count": 53
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-16T19:02:02.033344Z",
-     "start_time": "2025-01-16T19:02:02.020297Z"
+     "end_time": "2025-01-16T19:04:03.327050Z",
+     "start_time": "2025-01-16T19:04:03.313654Z"
     }
    },
    "cell_type": "code",
@@ -637,7 +637,7 @@
      ]
     }
    ],
-   "execution_count": 52
+   "execution_count": 54
   }
  ],
  "metadata": {
