MG finished 1/n ver 2.0

--- a/1_over_N.ipynb
+++ b/1_over_N.ipynb
@@ -5,8 +5,8 @@
    "id": "5008acbd-b508-454c-abaf-202ca736cdfb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-17T15:03:50.866281Z",
-     "start_time": "2025-01-17T15:03:50.857782Z"
+     "end_time": "2025-01-17T15:09:44.924646Z",
+     "start_time": "2025-01-17T15:09:44.915949Z"
     }
    },
    "source": [
@@ -16,15 +16,15 @@
     "import matplotlib.pyplot as plt\n"
    ],
    "outputs": [],
-   "execution_count": 109
+   "execution_count": 129
   },
   {
    "cell_type": "code",
    "id": "63589605-a9c7-428d-ba9d-93479a29fc26",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-17T15:03:52.922975Z",
-     "start_time": "2025-01-17T15:03:50.871493Z"
+     "end_time": "2025-01-17T15:09:47.074228Z",
+     "start_time": "2025-01-17T15:09:44.973477Z"
     }
    },
    "source": [
@@ -39,15 +39,15 @@
     "gold = pd.read_excel(\"./data/Price History_IAU_Gold_Trust.xlsx\")"
    ],
    "outputs": [],
-   "execution_count": 110
+   "execution_count": 130
   },
   {
    "cell_type": "code",
    "id": "18c1bd0b-4047-4479-8160-6417b48059a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-17T15:03:52.961191Z",
-     "start_time": "2025-01-17T15:03:52.941470Z"
+     "end_time": "2025-01-17T15:09:47.100661Z",
+     "start_time": "2025-01-17T15:09:47.078932Z"
     }
    },
    "source": [
@@ -68,15 +68,15 @@
     "gold = preprocess_and_rename(gold, 'Gold')"
    ],
    "outputs": [],
-   "execution_count": 111
+   "execution_count": 131
   },
   {
    "cell_type": "code",
    "id": "4fde3178-c36f-4ae9-80ec-55f48bc3b94d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-17T15:03:52.980633Z",
-     "start_time": "2025-01-17T15:03:52.976406Z"
+     "end_time": "2025-01-17T15:09:47.118975Z",
+     "start_time": "2025-01-17T15:09:47.113915Z"
     }
    },
    "source": "us",
@@ -177,20 +177,20 @@
        "</div>"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 112
+   "execution_count": 132
   },
   {
    "cell_type": "code",
    "id": "07b4f753-3e99-4742-acba-032da04b3753",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-17T15:03:53.021487Z",
-     "start_time": "2025-01-17T15:03:53.011954Z"
+     "end_time": "2025-01-17T15:09:47.172515Z",
+     "start_time": "2025-01-17T15:09:47.158958Z"
     }
    },
    "source": [
@@ -204,15 +204,15 @@
     "returns = returns.sort_values(by='Exchange Date', ascending=True)"
    ],
    "outputs": [],
-   "execution_count": 113
+   "execution_count": 133
   },
   {
    "cell_type": "code",
    "id": "4fc35f43-59b1-44d8-9355-58f6384abbd4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-17T15:03:53.066047Z",
-     "start_time": "2025-01-17T15:03:53.059878Z"
+     "end_time": "2025-01-17T15:09:47.215633Z",
+     "start_time": "2025-01-17T15:09:47.207533Z"
     }
    },
    "source": [
@@ -420,20 +420,20 @@
        "</div>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 114
+   "execution_count": 134
   },
   {
    "cell_type": "code",
    "id": "84766e3a-c776-4e04-8092-15497ef48b8a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-17T15:03:53.235423Z",
-     "start_time": "2025-01-17T15:03:53.109341Z"
+     "end_time": "2025-01-17T15:09:47.415765Z",
+     "start_time": "2025-01-17T15:09:47.270824Z"
     }
    },
    "source": [
@@ -499,15 +499,15 @@
      ]
     }
    ],
-   "execution_count": 115
+   "execution_count": 135
   },
   {
    "cell_type": "code",
    "id": "9c11f155-0388-428f-a8c5-7d32cbe11f6a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-17T15:03:53.272047Z",
-     "start_time": "2025-01-17T15:03:53.262150Z"
+     "end_time": "2025-01-17T15:09:47.461074Z",
+     "start_time": "2025-01-17T15:09:47.441168Z"
     }
    },
    "source": [
@@ -562,15 +562,15 @@
      ]
     }
    ],
-   "execution_count": 116
+   "execution_count": 136
   },
   {
    "cell_type": "code",
    "id": "3e0c493b-ed20-4157-8407-99884459e5dc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-17T15:03:53.838475Z",
-     "start_time": "2025-01-17T15:03:53.287210Z"
+     "end_time": "2025-01-17T15:09:48.043760Z",
+     "start_time": "2025-01-17T15:09:47.478341Z"
     }
    },
    "source": [
@@ -658,7 +658,7 @@
     "plt.show()\n",
     "\n",
     "# Print final portfolio value\n",
-    "print(f\"Final Portfolio Value (Non-Rebalancing): ${portfolio_value_rebalancing.iloc[-1]:,.2f}\")\n"
+    "print(f\"Final Portfolio Value (Rebalancing): ${portfolio_value_rebalancing.iloc[-1]:,.2f}\")\n"
    ],
    "outputs": [
     {
@@ -675,19 +675,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final Portfolio Value (Non-Rebalancing): $2,242,045.89\n"
+      "Final Portfolio Value (Rebalancing): $2,242,045.89\n"
      ]
     }
    ],
-   "execution_count": 117
+   "execution_count": 137
   },
   {
    "cell_type": "code",
    "id": "55c143ce-3a80-4133-a356-d86143dcaa38",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-17T15:03:53.871234Z",
-     "start_time": "2025-01-17T15:03:53.865490Z"
+     "end_time": "2025-01-17T15:09:48.066177Z",
+     "start_time": "2025-01-17T15:09:48.059503Z"
     }
    },
    "source": [
@@ -742,7 +742,7 @@
      ]
     }
    ],
-   "execution_count": 118
+   "execution_count": 138
   }
  ],
  "metadata": {
