changed input data to performance

--- a/Min_Var.ipynb
+++ b/Min_Var.ipynb
@@ -516,7 +516,7 @@
     "\n",
     "        # (A) If not the first rebal date, compute new weights:\n",
     "        if i > 0:\n",
-    "            lookback_days = 126  # ~126 trading days (6 months), just an example\n",
+    "            lookback_days = 180  # ~180 calendar days (6 months), just an example\n",
     "            cov_start = this_rebal_date - pd.Timedelta(days=lookback_days)\n",
     "            cov_data = returns.loc[cov_start:this_rebal_date]\n",
     "\n",
