--- a/Min_Var_Simulations/Min_Var_high_2020_2021.ipynb
+++ b/Min_Var_Simulations/Min_Var_high_2020_2021.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "5008acbd-b508-454c-abaf-202ca736cdfb",
    "metadata": {
     "ExecuteTime": {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "63589605-a9c7-428d-ba9d-93479a29fc26",
    "metadata": {
     "ExecuteTime": {
@@ -33,19 +33,19 @@
    "outputs": [],
    "source": [
     "# Read data into pandas\n",
-    "japan = pd.read_excel(\"./data/Price History_EWJ_Japan_Equity.xlsx\")\n",
-    "t_bills_7_10 = pd.read_excel(\"./data/Price History_7-10_US_TBills.xlsx\")\n",
-    "t_bills_20 = pd.read_excel(\"./data/Price History_20+_US_TBills.xlsx\")\n",
-    "apac_x_japan = pd.read_excel(\"./data/Price History_EPP_APACxJapan_Equity.xlsx\")\n",
-    "europe = pd.read_excel(\"./data/Price History_IEV_Europe_Equity.xlsx\")\n",
-    "latam = pd.read_excel(\"./data/Price History_ILF_LatAm_Equity.xlsx\")\n",
-    "us = pd.read_excel(\"./data/Price History_IVV_US_Equity.xlsx\")\n",
-    "gold = pd.read_excel(\"./data/Price History_IAU_Gold_Trust.xlsx\")"
+    "japan = pd.read_excel(\".././data/Price History_EWJ_Japan_Equity.xlsx\")\n",
+    "t_bills_7_10 = pd.read_excel(\".././data/Price History_7-10_US_TBills.xlsx\")\n",
+    "t_bills_20 = pd.read_excel(\".././data/Price History_20+_US_TBills.xlsx\")\n",
+    "apac_x_japan = pd.read_excel(\".././data/Price History_EPP_APACxJapan_Equity.xlsx\")\n",
+    "europe = pd.read_excel(\".././data/Price History_IEV_Europe_Equity.xlsx\")\n",
+    "latam = pd.read_excel(\".././data/Price History_ILF_LatAm_Equity.xlsx\")\n",
+    "us = pd.read_excel(\".././data/Price History_IVV_US_Equity.xlsx\")\n",
+    "gold = pd.read_excel(\".././data/Price History_IAU_Gold_Trust.xlsx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "18c1bd0b-4047-4479-8160-6417b48059a3",
    "metadata": {
     "ExecuteTime": {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "4fde3178-c36f-4ae9-80ec-55f48bc3b94d",
    "metadata": {
     "ExecuteTime": {
@@ -179,7 +179,7 @@
        "[5022 rows x 1 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "07b4f753-3e99-4742-acba-032da04b3753",
    "metadata": {
     "ExecuteTime": {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "4fc35f43-59b1-44d8-9355-58f6384abbd4",
    "metadata": {
     "ExecuteTime": {
@@ -422,7 +422,7 @@
        "[359 rows x 8 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "33d114c3-1e77-4838-a861-bb4470c412a4",
    "metadata": {
     "ExecuteTime": {
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "4d921794-764c-4cd4-a7bf-d8d130fb2e38",
    "metadata": {
     "ExecuteTime": {
