--- a/60E_40G_Simulations/60_Equity_40_Gold_high_2008_2011.ipynb
+++ b/60E_40G_Simulations/60_Equity_40_Gold_high_2008_2011.ipynb
@@ -603,7 +603,7 @@
     "#### 60/40 Gold Rebalancing Portfolio Construction ####\n",
     "\n",
     "# Define rebalancing frequency\n",
-    "n_frequency_rebalancing = 'YE'  # 'ME' = monthly, 'QE' = quarterly, 'YE' = yearly\n",
+    "n_frequency_rebalancing = 'ME'  # 'ME' = monthly, 'QE' = quarterly, 'YE' = yearly\n",
     "\n",
     "# Define asset-class weights\n",
     "asset_class_weights_rebalancing = {\n",
