--- a/Min_Var_Simulations/Min_Var_high_2008_2011.ipynb
+++ b/Min_Var_Simulations/Min_Var_high_2008_2011.ipynb
@@ -565,7 +565,7 @@
     "\n",
     "#### Actual Fuction Call ####\n",
     "\n",
-    "rebalance_frequency = 'YE'  # ME = monthly, QE = quarterly, YE = yearly\n",
+    "rebalance_frequency = 'ME'  # ME = monthly, QE = quarterly, YE = yearly\n",
     "portfolio_value, portfolio_weights = min_variance_portfolio(returns, rebalance_frequency)\n",
     "\n",
     "# Plot the portfolio value over time\n",
